<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MenU</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_home_fragment">Home</string>
    <string name="menu_fragment_menu_add">Add</string>
    <string name="account_id_textview">Account ID</string>
    <string name="account_contact_image_description">Profile image</string>
    <string name="account_email_textview">Email</string>
    <string name="account_doc_textview">Date of creation</string>
    <string name="Favourite_restaurants">Favourite restaurants</string>
    <string name="MenUURL">MenU.conradhaupt.co.za</string>
    <string name="MenUWebsiteButton">Website</string>
    <string name="MenUURLToast">Opening official website...</string>
    <string name="slidingmenu_heading">General</string>
    <string name="MenULicenseButton">Licenses</string>
    <string name="home_featured_title">Featured</string>
    <string name="slidingmenu_home">Home</string>
    <string name="slidingmenu_featured">Featured</string>
    <string name="slidingmenu_restaurants">Restaurants</string>
    <string name="slidingmenu_accounts">Accounts</string>
    <string name="slidingmenu_settings">Settings</string>
    <string name="slidingmenu_about">About</string>
    <string name="slidingmenu_info_title">MenU Android App</string>
    <string name="slidingmenu_info_content">Conrad Haupt ©2013</string>
    <string name="card_featured_title">Featured</string>
    <string name="restaurant_description_title">Description</string>
    <string name="aboutMenU_dialog_license">License</string>
    <string name="aboutMenU_dialog_license_slidingmenu">Slidingmenu license</string>
    <string name="aboutMenU_dialog_license_crouton">AppMsg Crouton license</string>
    <string name="aboutMenU_dialog_license_termsandconditions">Terms and conditions</string>
    <string name="aboutMenU_dialog_website">Website</string>
    <string name="aboutMenU_dialog_close">Close</string>
    <string name="aboutMenU_dialog_website_link">http://www.conradhaupt.co.za</string>
    <string name="aboutMenU_dialog_license_text">Do whatever you want with this app!</string>
    <string name="aboutMenU_dialog_license_copyright">Copyright 2013 Conrad Haupt</string>
    <string name="aboutMenU_dialog_license_termsandconditions_text">Seriously, do what ever you want!</string>
    <string name="aboutMenU_dialog_license_website_button">Website</string>
    <string name="aboutMenU_dialog_license_website_button_notavailable">No available website</string>
    <string name="aboutMenU_dialog_license_slidingmenu_copyright">Copyright 2012 Jeremy Feinstein</string>
    <string name="aboutMenU_dialog_license_crouton_copyright">Copyright 2012 Evgeny Shishkin</string>
    <string name="ApacheLicense">Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License. Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="ApacheLicenseURL">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="title_activity_settings">Settings</string>
    <string name="aboutMenU_dialog_license_close">Close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_account_settings">Account Settings</string>
    <string name="aboutMenU_dialog_license_showcaseview">Showcase View License</string>
    <string name="aboutMenU_dialog_license_showcaseview_copyright">Copyright 2012 Alex Curran</string>
    <string name="aboutMenU_dialog_license_slidingmenu_website">https://github.com/jfeinstein10/SlidingMenu</string>
    <string name="aboutMenU_dialog_license_crouton_website">https://github.com/johnkil/Android-AppMsg</string>
    <string name="aboutMenU_dialog_license_showcaseview_website">https://github.com/Espiandev/ShowcaseView</string>
    <string name="home_recommended_title">Recommended</string>
    <string name="home_nearby_title">Nearby</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_login">Login</string>
    <string name="activity_home_drawer_open">Open drawer</string>
    <string name="activity_home_drawer_close">Close drawer</string>
    <string name="activity_home_drawer_title_closed">MenU</string>
    <string name="activity_home_drawer_title_open">Navigation</string>
    <string name="menu_account_settings">Account settings</string>
    <string name="activity_login_register_title">Register</string>
    <string name="activity_login_register_username_hint">Username</string>
    <string name="activity_login_register_password_hint">Password</string>
    <string name="activity_login_register_password_hint_repeat">Password again</string>
    <string name="activity_login_register_firstname_hint">First name</string>
    <string name="activity_login_register_lastname_hint">Last name</string>
    <string name="activity_login_register_email_hint">Email</string>
    <string name="activity_login_register_submit">Register</string>
</resources>