<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp" >

        <TextView
            android:id="@+id/activity_login_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="15dp"
            android:text="@string/activity_login_register_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/activity_login_register_textview_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/activity_login_register_title"
            android:ems="10"
            android:hint="@string/activity_login_register_username_hint" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/activity_login_register_textview_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/activity_login_register_textview_username"
            android:ems="10"
            android:hint="@string/activity_login_register_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/activity_login_register_textview_password_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/activity_login_register_textview_password"
            android:ems="10"
            android:hint="@string/activity_login_register_password_hint_repeat"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/activity_login_register_textview_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/activity_login_register_textview_password_repeat"
            android:ems="10"
            android:hint="@string/activity_login_register_firstname_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/activity_login_register_textview_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/activity_login_register_textview_firstname"
            android:ems="10"
            android:hint="@string/activity_login_register_lastname_hint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/activity_login_register_textview_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/activity_login_register_textview_lastname"
            android:ems="10"
            android:hint="@string/activity_login_register_email_hint"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/activity_login_register_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/activity_login_register_submit" />

    </RelativeLayout>

</RelativeLayout>
